Fix RNN error not assigning self.cache correctly

--- a/ch05/chapter05.ipynb
+++ b/ch05/chapter05.ipynb
@@ -312,6 +312,8 @@
    "source": [
     "지금까지는 미니배치가 1인 경우 (다 집어넣는 경우) 였다. 가령 1000개의 데이터를 2 미니배치로 나눠 학습시킨다면 시작위치를 각 미니배치의 첫 위치로 옮겨줘야 한다. \n",
     "\n",
+    "병렬적으로 1 ~ 10, 501 ~ 510 을 1번째 truncated bptt, 그 다음 11 ~ 20, 511 ~ 520을 2번째 truncated bptt 로 계산해주는 것. \n",
+    "\n",
     "![fig_5-15.png](attachment:fig_5-15.png)\n",
     "\n",
     "다음을 기억하자. \n",
@@ -338,6 +340,10 @@
     "T개의 데이터를 다루는 RNN계층을 모두 모아 하나의 Time RNN 계층으로 만든다. \n",
     "\n",
     "** 앞으로 앞에 Time ~ 붙으면 데이터를 한꺼번에 처리하는 계층을 뜻함. 이 책에서의 약속임\n",
+    "\n",
+    "가령 \"you say goodbye\" 라는 것을 넣으면 you부터 RNN cell에 들어가고 ht가 다음 RNN cell에서 다음 입력인 say와 함께 처리되는 식이지만 개별 RNN cell을 보지 않고 \n",
+    "\n",
+    "입력 \"you say goodbye\" 전체를 받아 처리하는 RNN을 통으로 묶어 Time RNN으로 명명하는 것이다. \n",
     "\n",
     "![fig_5-17.png](attachment:fig_5-17.png)"
    ]
@@ -383,7 +389,7 @@
     "        t = np.matmul(h_prev, Wh) + np.matmul(x, Wx) + b\n",
     "        h_next = np.tanh(t)\n",
     "        \n",
-    "        self.cache(x, h_prev, h_next)\n",
+    "        self.cache = (x, h_prev, h_next)\n",
     "        return h_next\n",
     "    \n",
     "    def backward(self, dh_next):\n",
