Add markdown / fix typo

--- a/ch05/chapter05.ipynb
+++ b/ch05/chapter05.ipynb
@@ -526,7 +526,11 @@
     "\n",
     "![fig_5-24.png](attachment:fig_5-24.png)\n",
     "\n",
-    "역전파시 합산된 기울기 `dhs[:, t, :] + dh`가 전해진다. "
+    "역전파시 합산된 기울기 `dhs[:, t, :] + dh`가 전해진다. \n",
+    "\n",
+    "왜냐면 순전파 때 분기돼서 갔으니까. 역전파되면 당연히 다시 합쳐진다. \n",
+    "\n",
+    "Time RNN 계층의 기울기도 마찬가지 논리로 backpropagation 할 때 안에 들어있는 각 RNN 계층의 가중치 기울기를 모두 합한 것이 된다. "
    ]
   },
   {
@@ -648,10 +652,10 @@
     "        \n",
     "        # 가중치 초기화\n",
     "        embed_W = (rn(V, D) / 100).astype('f')\n",
-    "        rnn_Wx = (rn(D, H) / np.sqrt(D)).astype('f')\n",
-    "        rnn_Wh = (rn(H, H) / np.sqrt(H)).astype('f')\n",
+    "        rnn_Wx = (rn(D, H) / np.sqrt(D)).astype('f') # Xavier 초기값\n",
+    "        rnn_Wh = (rn(H, H) / np.sqrt(H)).astype('f') # Xaviar 초기값\n",
     "        rnn_b = np.zeros(H).astype('f')\n",
-    "        affine_W = (rn(H, V) / np.sqrt(H)).astype('f')\n",
+    "        affine_W = (rn(H, V) / np.sqrt(H)).astype('f') # Xavier 초기값\n",
     "        affine_b = np.zeros(V).astype('f')\n",
     "        \n",
     "        # 계층 생성\n",
@@ -667,7 +671,7 @@
     "        self.params, self.grads = [], []\n",
     "        for layer in self.layers:\n",
     "            self.params += layer.params\n",
-    "            self.grads == layer.grads\n",
+    "            self.grads += layer.grads\n",
     "    \n",
     "    def forward(self, xs, ts):\n",
     "        for layer in self.layers:\n",
@@ -689,7 +693,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`TimeRNN`은 당연히 `stateful=True`로 설정한다. \n",
+    "`TimeRNN`은 당연히 `stateful=True`로 설정한다. 이전 hidden state를 계속 받아 학습시킬 것이니까. \n",
     "\n",
     "위 코드에서 `np.sqrt()`로 나눠준 것들은 Xavier 초기값을 써준 것이다. 언어 모델 연구에서는 `0.01 * np.random.uniform(...)` 와같은 균일분포를 이용하는 사례도 많다. "
    ]
@@ -717,6 +721,8 @@
     "\n",
     "이는 다음에 올 정답 단어를 예측한 확률의 역수를 취한 값이며, 직관적으로 '분기수'(number of branches)로 해석할 수 있다. 따라서 선택 가능한 분기(후보)의 수가 적을수록, perplexity가 낮을수록 좋은 것이다. \n",
     "\n",
+    "perplexity는 앞에서 본 교차엔트로피와 같이 정답 label의 loss만을 취급한다. \n",
+    "\n",
     "![e_5-12.png](attachment:e_5-12.png) 일때 ![e_5-13.png](attachment:e_5-13.png)\n",
     "- N: 데이터의 갯수 \n",
     "- t_n: n번째 원핫 정답 레이블 \n",
@@ -724,6 +730,8 @@
     "- y_nk: 확률분포 (신경망에서는 softmax의 출력) \n",
     "\n",
     "이 L은 맨 앞에서 본 교차엔트로피 식이랑 완전히 동일하다. \n",
+    "\n",
+    "e^x 는 단조증가함수이기 때문에 마찬가지로 L가 작을수록 perplexity도 작아진다. \n",
     "\n",
     "정보이론 분야에선 perplexity를 '기하평균 분기 수'라고도 한다. "
    ]
