--- a/ch06/chapter06.ipynb
+++ b/ch06/chapter06.ipynb
@@ -369,7 +369,7 @@
     "\n",
     "이제 gate의 개념에 대해 설명하겠다. gate는 데이터의 흐름을 조절한다. \n",
     "\n",
-    "열림 상태의 범위 0.0 ~ 1.0 사이의 값을 통해 얼마나 흘려보낼지 결정할 수 있다. 이 열린 범위 또한 학습되는 parameter이다. \n",
+    "열림 상태의 범위 0.0 ~ 1.0 사이의 값을 통해 얼마나 흘려보낼지(openness) 결정할 수 있다. 이 열린 범위 또한 학습되는 parameter이다. \n",
     "\n",
     "![fig_6-14.png](attachment:fig_6-14.png)"
    ]
@@ -406,11 +406,10 @@
     "- σ는 시그모이드 함수이다. (출력범위: 0.0 ~ 1.0) 데이터를 얼마나 통과시킬지 정하는 비율이라고 해석할 수 있다. \n",
     "- `x_t`와 `h_t-1`은 행벡터이다. \n",
     "\n",
-    "이렇게 구한 `o`를 `tanh(c_t)`와 아다마르 곱해 `h_t`로 출력한다. \n",
+    "이렇게 sigmoid를 씌워 구한 `o`를 이전의 정보들을 담고 있는 cell state `c_t`를 activate한 `tanh(c_t)`와 아다마르(Hadamard product, = element-wise multiplication) 곱해 `h_t`로 출력한다. \n",
     "\n",
-    "tanh의 출력범위: -1.0 ~ 1.0\n",
-    "\n",
-    "이 출력은 인코딩된 정보의 강약(정도)를 표현한다고 해석할 수 있다. \n",
+    "- tanh의 출력범위: -1.0 ~ 1.0 --> 이 출력은 인코딩된 정보의 강약(정도)를 표현한다고 해석할 수 있다. --> 실질적 정보를 지니는 데이터에서 사용됨. \n",
+    "- sigmoid의 출력범위: 0.0 ~ 1.0 --> 이 출력은 데이터를 얼마나 통과시킬지 정하는 비율이라고 해석할 수 있다. --> 게이트로 사용됨. \n",
     "\n",
     "![e_6-2.png](attachment:e_6-2.png)\n",
     "\n",
@@ -451,9 +450,11 @@
     "\n",
     "![e_6-3.png](attachment:e_6-3.png)\n",
     "\n",
-    "하지만 이 `f`는 `h`를 구하는 것이 아니라 `c_t-1`에 곱해져 `c_t`를 구한다. \n",
+    "왜 forget gate인가? sigmoid를 통과한 f가 곱해지면 0~1 사이의 값이기 때문에 `c_t-1`이 줄어든다. \n",
     "\n",
-    "즉, `c_t 에는 f ⊙ c_t-1`이 더해진다. (다른 것이랑 같이 더해짐. 6.3 참고) "
+    "이 `f`는 `h`를 구하는 것이 아니라 `c_t-1`에 곱해져 `c_t`를 구한다. \n",
+    "\n",
+    "즉, `c_t 에는 (바로 뒤에 나올 기억 셀) g와 f ⊙ c_t-1`이 더해진다. (다른 것이랑 같이 더해짐. 6.3 참고) "
    ]
   },
   {
@@ -509,13 +510,19 @@
     "\n",
     "이 게이트는 `g`의 각 원소가 새로 추가되는 정보로써의 가치가 얼마나 큰지 판단한다. 새 정보를 그냥 수용하는 것이 아닌 최적화되도록 적당량 받아내는 것이 이 게이트의 역할이다. \n",
     "\n",
+    "다시 말하면 input gate에 의해 `g`가 가중치로 곱해져 `f ⊙ c_t-1`에 더해지는 것이다. \n",
+    "\n",
+    "즉, `c_t = f ⊙ c_t-1 + g ⊙ i`이다. \n",
+    "\n",
     "input gate의 출력 `i`역시 똑같이 계산된다. \n",
     "\n",
     "![e_6-5.png](attachment:e_6-5.png)\n",
     "\n",
     "![fig_6-18.png](attachment:fig_6-18.png)\n",
     "\n",
-    "이것이 기본적인 LSTM의 게이트 구조이고, variation에 따라 게이트 구조가 다른 것들도 많다. "
+    "이것이 기본적인 LSTM의 게이트 구조이고, variation에 따라 게이트 구조가 다른 것들도 많다. \n",
+    "\n",
+    "결국 위에서 본 LSTM도 어떻게 취사선택하느냐에 달린 것이니까. "
    ]
   },
   {
@@ -536,27 +543,21 @@
    "source": [
     "하지만 정확히 어떤 원리로 기울기 소실을 해결해 주는 것일까?\n",
     "\n",
-    "기억 cell `c`의 역전파에 주목하자. \n",
+    "기억 cell `c`의 역전파에 주목하자. 딱 두 개만 계산그래프에서 지난다. `+`, `*` 두 개만 지난다. \n",
     "\n",
-    "`+`노드는 기울기를 그대로 흘린다. 영향 없다. `*`노드는 아다마르 곱, 즉 element-wise 곱을 수행한다. 아까는 `MatMul`곱을 쓴 것과 다르다. \n",
-    "\n",
-    "또한 매 시간 다른 게이트 값을 이용해 원소별 곱을 계산한다. 계속 새로운 게이트 값을 쓰므로, 곱셈의 효과가 단순히 누적되지 않는다. \n",
-    "\n",
-    "그래서 기울기 소실이 일어나기 어렵다. \n",
-    "\n",
-    "`*`노드는 forget 게이트가 제어하는데, 잊어야 성능 좋아지는 cell의 원소는 기울기를 작게 만들고 기억해야 성능이 좋아지는 cell의 원소는 기울기를 유지시켜 흘려보내기 때문에 이런 효과가 나타난다고 생각할 수 있다. \n",
+    "- `+`노드는 기울기를 그대로 흘린다. 영향 없다. \n",
+    "- `*`노드는 아다마르 곱, 즉 element-wise 곱을 수행한다. \n",
+    "    - 아까는 계속 같은 가중치 `W`에 대해 `MatMul`곱을 계속했다. \n",
+    "    - 반면 이번에는 계속 다른 gate 값 `f`에 대해 `x`곱을 하는 것이다. 계속 새로운 gate 값 `f`를 쓰므로 곱셈의 효과가 단순히 0.5^n 한 것처럼 누적되지 않는다. \n",
+    "    - 그래서 기울기 소실이 잘 일어나지 않는다. (꼭 아니라는 것은 아니지만.)\n",
+    "    - `*`노드는 forget 게이트가 제어하는데, \n",
+    "        - 잊어야 성능 좋아지는 cell의 원소는 기울기를 작게 만들고 (작게) \n",
+    "        - 기억해야 성능이 좋아지는 cell의 원소는 기울기를 유지시켜 흘려보내기 때문에 (크게) 이런 효과가 나타난다고 생각할 수 있다. \n",
     "\n",
     "LSTM (Long Short-Term Memory)는 단기기억을 길게 지속하는 것을 의미한다. \n",
     "\n",
     "![fig_6-19.png](attachment:fig_6-19.png)\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h2 style='color:red;'>이 말은 기울기를 계속해서 W^n 하는 것과 다르다는 뜻인데, 그럼 중간에 어떨땐 1을 곱해주고 어떨 땐 1보다 작은 값을 곱해주고 그런다는 뜻인가? </h2>"
    ]
   },
   {
@@ -603,6 +604,8 @@
     "Affine transformation이란 행렬 변환과 평행이동(편향)을 결합한 형태 - 즉, `x*W_x + h*W_h + b` 형태의 식을 가리킨다. \n",
     "\n",
     "이 affine transformation을 하나의 식으로 한 번에 계산할 수 있다. 그러면 코드도 간결해지고 계산도 빨라진다. (대행렬 연산이므로)\n",
+    "\n",
+    "즉, 4개의 수식 계산하던걸 묶어서 1개의 수식으로 계산하는 것이다. \n",
     "\n",
     "![fig_6-20.png](attachment:fig_6-20.png)\n",
     "\n",
@@ -853,6 +856,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "이번엔 PTB 데이터셋을 모두 활용해 학습해본다. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -1070,6 +1080,10 @@
     "\n",
     "이 때 가중치를 공유하기 위해선 Embedding layer의 `W`를 Transpose해주기만 하면 된다. \n",
     "\n",
+    "왜 효과가 있는가?\n",
+    "- 가중치를 공유해서 그만큼 학습할 매개변수가 줄어서 generalization이 잘됨. \n",
+    "- 가중치를 공유해서 그만큼 학습할 매개변수가 줄어서 학습이 쉬워짐. \n",
+    "\n",
     "![fig_6-35.png](attachment:fig_6-35.png)"
    ]
   },
@@ -1098,6 +1112,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "위의 개선점들을 반영해 RNN LM을 만든다면? \n",
+    "\n",
+    "- LSTM을 2층으로\n",
+    "- dropout 사용\n",
+    "- 가중치 공유 (embedding과 affine)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -1117,7 +1143,7 @@
     "        lstm_b2 = np.zeros(4 * H).astype('f')\n",
     "        affine_b = np.zeros(V).astype('f')\n",
     "        \n",
-    "        # 3가지 개선\n",
+    "        # 여기에서 개선. 3가지 개선\n",
     "        self.layers = [\n",
     "            TimeEmbedding(embed_W), \n",
     "            TimeDropout(dropout_ratio), # 중간중간 dropout 넣어준다. 수직방향으로.\n",
